--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "saga-action-creator",
-  "version": "0.1.0",
+  "version": "0.2.0-0",
   "description": "A toolkit to auto generate actions for the redux-saga.",
   "main": "build/index.js",
   "scripts": {
