--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "typings": "build/index.d.ts",
   "scripts": {
     "test": "jest",
+    "test:coverage": "yarn test --coverage",
     "build": "rollup -c",
     "prepublishOnly": "npm run build",
     "server": "parcel serve example/index.html",
@@ -48,6 +49,7 @@
     ]
   },
   "dependencies": {
+    "@types/jest": "^24.0.18",
     "lodash": "^4.17.15",
     "redux": "^4.0.4",
     "redux-saga": "^1.0.5"
