--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "esnext",
     "module": "esnext",
     "strict": true,
+    "jsx": "react",
     "resolveJsonModule": true,
     "importHelpers": true,
     "moduleResolution": "node",
