--- a/package.json
+++ b/package.json
@@ -23,27 +23,27 @@
   "author": "Justinidlerz <zqc.sunny@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.0.0-0",
-    "@babel/preset-env": "^7.6.0",
-    "@babel/preset-typescript": "^7.6.0",
-    "@types/jest": "^24.0.18",
-    "@types/lodash": "^4.14.138",
-    "@types/react": "^16.9.5",
-    "@types/react-dom": "^16.9.1",
-    "@types/react-redux": "^7.1.4",
+    "@babel/core": "^7.8.6",
+    "@babel/preset-env": "^7.8.6",
+    "@babel/preset-typescript": "^7.8.3",
+    "@types/jest": "^25.1.3",
+    "@types/lodash": "^4.14.149",
+    "@types/react": "^16.9.23",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-redux": "^7.1.7",
     "babel-preset-es2015-rollup": "^3.0.0",
-    "jest": "^24.5.0",
+    "jest": "^25.1.0",
     "npm-run-all": "^4.1.5",
-    "parcel": "^1.12.2",
-    "prettier": "^1.18.2",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-redux": "^7.1.1",
-    "rollup": "^1.6.0",
+    "parcel": "^1.12.4",
+    "prettier": "^1.19.1",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-redux": "^7.2.0",
+    "rollup": "^1.31.1",
     "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-typescript2": "^0.20.1",
-    "ts-jest": "^24.0.0",
-    "typescript": "3.6.3"
+    "rollup-plugin-typescript2": "^0.26.0",
+    "ts-jest": "^25.2.1",
+    "typescript": "^3.8.2"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
@@ -56,7 +56,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.15",
-    "redux": "^4.0.4",
-    "redux-saga": "^1.0.5"
+    "redux": "4.0.5",
+    "redux-saga": "1.1.3"
   }
 }
