--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "saga-action-creator",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "A toolkit to auto generate actions for the redux-saga.",
   "repository": "https://github.com/Justinidlerz/saga-action-creator",
   "bugs": "https://github.com/Justinidlerz/saga-action-creator/issues",
@@ -45,7 +45,9 @@
     "ts-jest": "^25.2.1",
     "typescript": "^3.8.2"
   },
-  "publishConfig": { "registry": "https://npm.pkg.github.com/" },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "gitHooks": {
     "pre-commit": "lint-staged"
   },
