--- a/package.json
+++ b/package.json
@@ -23,27 +23,27 @@
   "author": "Justinidlerz <zqc.sunny@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.8.6",
-    "@babel/preset-env": "^7.8.6",
-    "@babel/preset-typescript": "^7.8.3",
-    "@types/jest": "^25.1.3",
+    "@babel/core": "7.9.0",
+    "@babel/preset-env": "7.9.0",
+    "@babel/preset-typescript": "7.9.0",
+    "@types/jest": "25.1.4",
     "@types/lodash": "^4.14.149",
-    "@types/react": "^16.9.23",
+    "@types/react": "16.9.26",
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
     "babel-preset-es2015-rollup": "^3.0.0",
-    "jest": "^25.1.0",
+    "jest": "25.2.3",
     "npm-run-all": "^4.1.5",
     "parcel": "^1.12.4",
-    "prettier": "^1.19.1",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "prettier": "2.0.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "react-redux": "^7.2.0",
-    "rollup": "^1.31.1",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-typescript2": "^0.26.0",
+    "rollup": "2.2.0",
+    "rollup-plugin-babel": "4.4.0",
+    "rollup-plugin-typescript2": "0.27.0",
     "ts-jest": "^25.2.1",
-    "typescript": "^3.8.2"
+    "typescript": "3.8.3"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
